// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checklist Upload leave certification step renders adoption bonding leave content if claim reason is adoption 1`] = `
Array [
  <p
    key="p-0"
  >
    You need to provide a statement confirming the placement and the date of placement.
  </p>,
  <p
    key="p-1"
  >
    Your certification documents will be shared with your employer as part of your application.
  </p>,
]
`;

exports[`Checklist Upload leave certification step renders medical leave content if claim reason is medical 1`] = `
Array [
  <p
    key="p-0"
  >
    You need to provide your completed 
    <a
      href="https://www.mass.gov/medical-leave-form"
      key="1"
      rel="noopener"
      target="_blank"
    >
      Certification of Your Serious Health Condition
    </a>
    .
  </p>,
  <p
    key="p-1"
  >
    Your certification documents will be shared with your employer as part of your leave application.
  </p>,
]
`;

exports[`Checklist Upload leave certification step renders newborn bonding leave content if claim reason is newborn 1`] = `
Array [
  <p
    key="p-0"
  >
    You need to provide your child’s birth certificate or a document from a health care provider that shows the child’s date of birth.
  </p>,
  <p
    key="p-1"
  >
    Your certification documents will be shared with your employer as part of your application.
  </p>,
]
`;

exports[`Checklist renders 'In progress' version of Part 1 StepList description when claim isn't yet submitted 1`] = `"Your progress is automatically saved as you complete the application. You can edit any information you enter in Part 1 until step 5 is completed."`;

exports[`Checklist renders description for Step 1`] = `
Array [
  <p
    key="p-0"
  >
    You can use a variety of documents to verify your identity, but it’s easiest if you have a Massachusetts driver’s license or Massachusetts Identification Card.
  </p>,
  <p
    key="p-1"
  >
    You will need to provide:
  </p>,
  <ul
    className="usa-list"
    key="2"
  >
    <li
      key="0"
    >
      Your name as it appears on your ID.
    </li>
    <li
      key="1"
    >
      Your driver’s license number or Mass ID number, if you have one.
    </li>
    <li
      key="2"
    >
      Your Social Security Number or Individual Taxpayer Identification Number.
    </li>
  </ul>,
]
`;

exports[`Checklist renders description for Step 2`] = `
Array [
  "You will need to know:",
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Your employer’s 9 digit federal employer identification number (FEIN or EIN). 
      <br
        key="br-1"
      />
      <strong
        key="strong-2"
      >
        Where to find this: 
      </strong>
      on your W‑2 or 1099, or ask your employer’s finance department.
    </li>
    <li
      key="1"
    >
      The date you told your employer you were taking leave.
    </li>
  </ul>,
  <p
    key="p-2"
  >
    If you are taking leave from multiple employers, you must create separate applications for each job.
  </p>,
]
`;

exports[`Checklist renders description for Step 3`] = `
Array [
  <p
    key="p-0"
  >
    If you’re not sure what kind of leave to apply for, 
    <a
      href="https://www.mass.gov/which-paid-leave"
      key="1"
      rel="noopener"
      target="_blank"
    >
      learn more about Paid Family and Medical Leave
    </a>
    .
  </p>,
  <p
    key="p-1"
  >
    <strong
      key="strong-0"
    >
      Are you taking medical leave for your own serious health condition?
    </strong>
  </p>,
  <p
    key="p-2"
  >
    You need to have a completed 
    <a
      href="https://www.mass.gov/medical-leave-form"
      key="1"
      rel="noopener"
      target="_blank"
    >
      Certification of Your Serious Health Condition
    </a>
    . Use your health care provider’s answers on the certification form to fill out some parts of the application.
  </p>,
  <p
    key="p-3"
  >
    If you give birth and plan to take both pregnancy-related medical leave and family leave to bond with your newborn, you should apply for medical leave first. Family leave to bond with your child can be easily added to your claim by calling our Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </p>,
  <p
    key="p-4"
  >
    <strong
      key="strong-0"
    >
      Are you taking leave to bond with a child?
    </strong>
  </p>,
  <p
    key="p-5"
  >
    You need to know the child’s date of birth, due date, or the date they arrived in your home for adoption or foster care.
  </p>,
  <p
    key="p-6"
  >
    You also need to know when you want your leave to begin and end.
  </p>,
  <p
    key="p-7"
  >
    <strong
      key="strong-0"
    >
      Are you taking leave to care for a family member?
    </strong>
  </p>,
  <p
    key="p-8"
  >
    You need to have the 
    <a
      href="https://www.mass.gov/family-caring-form"
      key="1"
      rel="noopener"
      target="_blank"
    >
      Certification of Your Family Member’s Serious Health Condition
    </a>
     completed by their health care provider. You will need to use the health care provider’s answers on the certification form to fill out some parts of the application.
  </p>,
  <p
    key="p-9"
  >
    You also need to be sure of the 
    <a
      href="https://www.mass.gov/family-caring-leave-relationships"
      key="1"
      rel="noopener"
      target="_blank"
    >
      eligibility of your relationship
    </a>
    .
  </p>,
]
`;

exports[`Checklist renders description for Step 4`] = `
Array [
  "You will need to know:",
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      If you will use any benefits from your employer because you are taking leave.
    </li>
    <li
      key="1"
    >
      If you will receive income from any other sources during your leave.
    </li>
    <li
      key="2"
    >
      The dates for any leave you’ve taken since January 1, 2021 for a condition that is covered by Paid Family and Medical Leave.
    </li>
  </ul>,
]
`;

exports[`Checklist renders description for Step 5`] = `
Array [
  <p
    key="p-0"
  >
    Once you confirm your leave information, we’ll notify your employer. Your job will be protected. To complete your application, you will need to finish the following three steps and submit.
  </p>,
  <p
    key="p-1"
  >
    If you need to edit your information in Part 1 after completing this step, you’ll need to call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </p>,
]
`;

exports[`Checklist renders description for Step 6`] = `
Array [
  <p
    key="p-0"
  >
    Tell us how you want to receive payment.
  </p>,
  <p
    key="p-1"
  >
    If you want to receive payment by direct deposit, you will need to provide your bank account information, including a routing number and account number.
  </p>,
]
`;

exports[`Checklist renders description for Step 7`] = `
Array [
  <p
    key="p-0"
  >
    Upload proof of identity. If you entered a Massachusetts driver’s license or Mass ID number in step 1, upload the same ID.
  </p>,
  <p
    key="p-1"
  >
    For other IDs, follow the instructions for acceptable proof of identity on the upload page.
  </p>,
]
`;

exports[`Checklist renders description for Step 8`] = `
Array [
  <p
    key="p-0"
  >
    You need to provide your child’s birth certificate or a document from a health care provider that shows the child’s date of birth.
  </p>,
  <p
    key="p-1"
  >
    Your certification documents will be shared with your employer as part of your application.
  </p>,
]
`;

exports[`Checklist renders multiple StepList components with list of Steps 1`] = `
<div
  className="measure-6"
>
  <BackButton
    href="/applications"
    label="Back to applications"
  />
  <Title
    hidden={true}
  >
    Checklist: Create a new application
  </Title>
  <StepList
    description={
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "mail-fax-instructions-link": <a
              href="https://www.mass.gov/pfmlsubmitinfo"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepListDescription"
        tOptions={
          Object {
            "context": "1",
          }
        }
        values={
          Object {
            "absence_id": null,
          }
        }
      />
    }
    editText="Edit"
    key="1"
    resumeScreenReaderText="Continue with"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <React.Fragment>
        <HeadingPrefix>
          Part 1
        </HeadingPrefix>
        Tell us about yourself and your leave
      </React.Fragment>
    }
  >
    <Step
      completedText="Completed"
      editable={true}
      key="VERIFY_ID"
      number={1}
      status="completed"
      stepHref="/applications/name?claim_id=mock_application_id"
      submittedContent={null}
      title="Verify your identification"
    >
      <Trans
        components={
          Object {
            "caregiver-certification-form-link": <a
              href="https://www.mass.gov/family-caring-form"
              rel="noopener"
              target="_blank"
            />,
            "caregiver-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/medical-leave-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "which-paid-leave-link": <a
              href="https://www.mass.gov/which-paid-leave"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "verifyId",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="EMPLOYER_INFORMATION"
      number={2}
      status="completed"
      stepHref="/applications/employment-status?claim_id=mock_application_id"
      submittedContent={null}
      title="Enter employment information"
    >
      <Trans
        components={
          Object {
            "caregiver-certification-form-link": <a
              href="https://www.mass.gov/family-caring-form"
              rel="noopener"
              target="_blank"
            />,
            "caregiver-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/medical-leave-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "which-paid-leave-link": <a
              href="https://www.mass.gov/which-paid-leave"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "employerInformation",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="LEAVE_DETAILS"
      number={3}
      status="completed"
      stepHref="/applications/leave-reason?claim_id=mock_application_id"
      submittedContent={null}
      title="Enter leave details"
    >
      <Trans
        components={
          Object {
            "caregiver-certification-form-link": <a
              href="https://www.mass.gov/family-caring-form"
              rel="noopener"
              target="_blank"
            />,
            "caregiver-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/medical-leave-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "which-paid-leave-link": <a
              href="https://www.mass.gov/which-paid-leave"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "leaveDetails",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="OTHER_LEAVE"
      number={4}
      status="completed"
      stepHref="/applications/previous-leaves-intro?claim_id=mock_application_id"
      submittedContent={
        <React.Fragment>
          <Trans
            components={
              Object {
                "contact-center-phone-link": <a
                  href="tel:(833) 344-7365"
                />,
              }
            }
            i18nKey="pages.claimsChecklist.otherLeaveSubmittedIntro"
          />
          <Details
            label="What do I need to report?"
          >
            <Trans
              components={
                Object {
                  "li": <li />,
                  "ul": <ul
                    className="usa-list"
                  />,
                  "when-can-i-use-pfml": <a
                    href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
                    rel="noopener noreferrer"
                    target="_blank"
                  />,
                }
              }
              i18nKey="pages.claimsChecklist.otherLeaveSubmittedDetailsBody"
            />
          </Details>
        </React.Fragment>
      }
      title="Report other leave, benefits, and income"
    >
      <Trans
        components={
          Object {
            "caregiver-certification-form-link": <a
              href="https://www.mass.gov/family-caring-form"
              rel="noopener"
              target="_blank"
            />,
            "caregiver-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/medical-leave-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "which-paid-leave-link": <a
              href="https://www.mass.gov/which-paid-leave"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "otherLeave",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="REVIEW_AND_CONFIRM"
      number={5}
      status="not_started"
      stepHref="/applications/review?claim_id=mock_application_id"
      submittedContent={null}
      title="Review and confirm"
    >
      <Trans
        components={
          Object {
            "caregiver-certification-form-link": <a
              href="https://www.mass.gov/family-caring-form"
              rel="noopener"
              target="_blank"
            />,
            "caregiver-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/medical-leave-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "which-paid-leave-link": <a
              href="https://www.mass.gov/which-paid-leave"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "reviewAndConfirm",
          }
        }
      />
    </Step>
  </StepList>
  <StepList
    description={null}
    editText="Edit"
    key="2"
    resumeScreenReaderText="Continue with"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <React.Fragment>
        <HeadingPrefix>
          Part 2
        </HeadingPrefix>
        Enter your payment information
      </React.Fragment>
    }
  >
    <Step
      completedText="Completed"
      editable={true}
      key="PAYMENT"
      number={6}
      status="disabled"
      stepHref="/applications/payment-method?claim_id=mock_application_id"
      submittedContent={null}
      title="Add payment information"
    >
      <Trans
        components={
          Object {
            "caregiver-certification-form-link": <a
              href="https://www.mass.gov/family-caring-form"
              rel="noopener"
              target="_blank"
            />,
            "caregiver-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/medical-leave-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "which-paid-leave-link": <a
              href="https://www.mass.gov/which-paid-leave"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "payment",
          }
        }
      />
    </Step>
  </StepList>
  <StepList
    description={null}
    editText="Edit"
    key="3"
    resumeScreenReaderText="Continue with"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <React.Fragment>
        <HeadingPrefix>
          Part 3
        </HeadingPrefix>
        Upload your documents
      </React.Fragment>
    }
  >
    <Step
      completedText="Completed"
      editable={true}
      key="UPLOAD_ID"
      number={7}
      status="disabled"
      stepHref="/applications/upload-id?claim_id=mock_application_id"
      submittedContent={null}
      title="Upload identification document"
    >
      <Trans
        components={
          Object {
            "caregiver-certification-form-link": <a
              href="https://www.mass.gov/family-caring-form"
              rel="noopener"
              target="_blank"
            />,
            "caregiver-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/medical-leave-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "which-paid-leave-link": <a
              href="https://www.mass.gov/which-paid-leave"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "uploadId",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="UPLOAD_CERTIFICATION"
      number={8}
      status="disabled"
      stepHref="/applications/upload-certification?claim_id=mock_application_id"
      submittedContent={null}
      title="Upload leave certification documents"
    >
      <Trans
        components={
          Object {
            "caregiver-certification-form-link": <a
              href="https://www.mass.gov/family-caring-form"
              rel="noopener"
              target="_blank"
            />,
            "caregiver-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/medical-leave-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
            "which-paid-leave-link": <a
              href="https://www.mass.gov/which-paid-leave"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": undefined,
          }
        }
      />
    </Step>
  </StepList>
  <ButtonLink
    className="margin-bottom-8"
    disabled={true}
    href="/applications/review?claim_id=mock_application_id"
  >
    Review and submit application
  </ButtonLink>
</div>
`;

exports[`Checklist renders success message after submitting part 2 1`] = `
<Alert
  className="margin-bottom-3"
  heading="Part 2 of your application was confirmed."
  name="part-two-submitted-message"
  state="success"
>
  Now, you can work on Part 3, and submit your application.
</Alert>
`;

exports[`Checklist renders success message after submitting part one 1`] = `
Array [
  "Your in-progress application will be viewable by our Contact Center staff. If you need to make edits to Part 1, you’ll need to call our Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  ". Now, you can work on Parts 2 and 3, and submit your application.",
]
`;

exports[`Checklist when Part 1 is submitted renders descriptions for Part 2 1`] = `
Array [
  "Entering payment information here leads to faster processing, but you can also call ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  ".",
]
`;

exports[`Checklist when Part 1 is submitted renders different description for Part 1 1`] = `
Array [
  "If you need to edit your information in Part 1, you’ll need to call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  ". Your application ID is ",
  <strong
    key="strong-3"
  >
    NTN-111-ABS-01
  </strong>,
  ".",
]
`;

exports[`Checklist when Part 1 is submitted w/o Other Leave data passes submittedContent to Other Leave step 1`] = `
Array [
  <Trans
    components={
      Object {
        "contact-center-phone-link": <a
          href="tel:(833) 344-7365"
        />,
      }
    }
    i18nKey="pages.claimsChecklist.otherLeaveSubmittedIntro"
  >
    <p
      key="p-0"
    >
      If you have any other leaves, benefits, or income to report, call the Contact Center at 
      <a
        href="tel:(833) 344-7365"
        key="1"
      >
        (833) 344‑7365
      </a>
      .
    </p>
  </Trans>,
  <Details
    label="What do I need to report?"
  >
    <details
      className="c-details"
    >
      <summary
        className="margin-bottom-2 text-primary text-underline font-ui-xs"
      >
        What do I need to report?
      </summary>
      <div
        className="margin-bottom-2"
      >
        <Trans
          components={
            Object {
              "li": <li />,
              "ul": <ul
                className="usa-list"
              />,
              "when-can-i-use-pfml": <a
                href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
                rel="noopener noreferrer"
                target="_blank"
              />,
            }
          }
          i18nKey="pages.claimsChecklist.otherLeaveSubmittedDetailsBody"
        >
          <ul
            className="usa-list"
            key="0"
          >
            <li
              key="0"
            >
              You have already taken leave to care for a family member since July 1, 2021
            </li>
            <li
              key="1"
            >
              You have already taken leave since January 1, 2021 
              <a
                href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
                key="1"
                rel="noopener noreferrer"
                target="_blank"
              >
                for any other reason that qualifies for PFML
              </a>
            </li>
            <li
              key="2"
            >
              You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
            </li>
            <li
              key="3"
            >
              You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
            </li>
          </ul>
        </Trans>
      </div>
    </details>
  </Details>,
]
`;

exports[`Checklist when Part 2 is submitted renders descriptions for Part 3 1`] = `
Array [
  "Uploading documents online leads to faster processing, but you can also ",
  <a
    href="https://www.mass.gov/pfmlsubmitinfo"
    key="1"
    rel="noopener"
    target="_blank"
  >
    fax or mail documents
  </a>,
  ".",
]
`;

exports[`Checklist when Part 2 is submitted renders submitted descriptions for Part 2 1`] = `
Array [
  "If you need to edit your information in Part 2, you’ll need to call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  ". Your application ID is ",
  <strong
    key="strong-3"
  >
    NTN-111-ABS-01
  </strong>,
  ".",
]
`;
